--- a/blog.html
+++ b/blog.html
@@ -56,7 +56,7 @@
         
                 <div id="navigation">
                     <!-- Navigation Menu-->   
-                    <ul class="navigation-menu nav-light">
+                    <ul class="navigation-menu nav-right nav-light">
                         <li><a href="index.html">Fitur</a></li>
                         <li><a href="index.html">Cinta</a></li>
                         <li><a href="index.html">Promo</a></li>
